Update movie display in home.html with headings and adjust layout in home_style.css for better alignment; fix JavaScript selectors for container elements

--- a/home_style.css
+++ b/home_style.css
@@ -128,7 +128,7 @@ body {
     justify-content: center;
     flex-direction: row;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     display: none;
 }
 
@@ -140,7 +140,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    width: 20%; ;
+    width: 15%; ;
     color: #fffbf0;
 
 }
